--- a/style.css
+++ b/style.css
@@ -5,9 +5,22 @@ body {
     margin: auto;
     font-family: sans-serif;
 }
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-column-gap: 3%;
+    grid-row-gap: 3%;
+    grid-template-areas: 
+    "header header header header";
+}
 header {
-    display: flex;
-    justify-content: center;
+    grid-area: header;
+}
+.fulline {
+    grid-column: 1 / span 4;
+}
+#inputone {
+    grid-column: 1 / span 3;
 }
 #maintitle {
     display: flex;
@@ -16,7 +29,6 @@ header {
     text-align: center;
 }
 .sectiontitle {
-    text-decoration: bold;
     padding: 10px;
     margin-top: 30px;
     border-bottom: solid #05B0EE 2px;
@@ -33,19 +45,12 @@ input {
     color: grey;
     margin-top: 0;
 }
-.line {
-    display: flex;
-    justify-content: space-between;
-}
 .sizeone {
     width: 23%;
 }
 .sizetwo {
     width: 48%
     justify-content: flex-start;
-}
-.sizethree {
-    width: 74%;
 }
 .sizefour {
     width: 100%;
@@ -82,27 +87,31 @@ textarea {
     align-items: flex-start;
     width: 48%;
 }
+#lableone {
+    grid-column: 1 / span 1;
+}
+#labletwo {
+    grid-column: 2 / span 1;
+}
+#lablethree {
+    grid-column: 3 / span 1;
+}
+#lablefour {
+    grid-column: 4 / span 1;
+}
 .checkboxholder {
     display: flex;
     align-items: flex-start;
+}
 
-}
-#submitButton {
-    width: 15%;
-    height: 60px;
-    margin: 1px;
-    font-size: 18px;
-    background-color: #05B0EE;
-    color: white;
-    border: solid grey 1px;
-    cursor: pointer;
-}
 input[type="radio"] {
     display: none;
 }
 input[type="radio"] + label {
+    width: 100%;
     color: white;
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     text-align: center;
     border: solid grey 1px;
     cursor: pointer;
@@ -122,9 +131,7 @@ input[type="checkbox"] {
     cursor: pointer;
     border: solid red 2px;
 }
-#buttondiv {
-    margin-bottom: 50px;
-}
+
 input[type="checkbox"] + label:before {
     content: '';
     background-color: transparent;
@@ -148,4 +155,23 @@ input[type="checkbox"]:checked + label:before {
     padding: 1px;
     margin-right: 10px;
     text-align: center;    
+}
+#sectionthree {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-column-gap: 3%;
+    grid-row-gap: 3%;
+}
+#buttondiv {
+    margin-bottom: 50px;
+}
+#submitButton {
+    width: 100%;
+    height: 60px;
+    margin: 1px;
+    font-size: 18px;
+    background-color: #05B0EE;
+    color: white;
+    border: solid grey 1px;
+    cursor: pointer;
 }
