--- a/style.css
+++ b/style.css
@@ -182,6 +182,6 @@ input:required:invalid, input:focus:invalid {
     border-bottom: solid 1px red;
 }
 
-input:required:valid, input:focus:valid {
+input:required:valid, input:focus:valid, input:required:placeholder-shown {
     border-bottom: solid 2px grey;
 }
