--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ header {
     padding: 10px;
     margin-top: 30px;
     border-bottom: solid #05B0EE 2px;
+    grid-column: 1 / -1;
 }
 input {
     background-color: transparent;
@@ -118,7 +119,6 @@ input[type="radio"] + label {
 }
 input[type="radio"]:checked + label {
     background-color: #05B0EE;
-    border: solid grey 1px;
 }
 
 input[type="checkbox"] + label {
@@ -174,4 +174,14 @@ input[type="checkbox"]:checked + label:before {
     color: white;
     border: solid grey 1px;
     cursor: pointer;
+}
+
+/* validation */
+
+input:required:invalid, input:focus:invalid {
+    border-bottom: solid 1px red;
+}
+
+input:required:valid, input:focus:valid, input:required:placeholder-shown {
+    border-bottom: solid 2px grey;
 }
